MIS-2 Introduce launching window optimization